--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -58,6 +58,10 @@
                 <source>menu.musicfriend</source>
                 <target>أن تكون رفيق موسيقى</target>
             </trans-unit>
+            <trans-unit id="menu.startfriend">
+                <source>menu.startfriend</source>
+                <target>Startkompis</target>
+            </trans-unit>
             <trans-unit id="menu.support">
                 <source>menu.support</source>
                 <target>ادعمنا</target>
@@ -819,6 +823,26 @@ Your friends at Kompisbyrån
                             أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> أو <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
                         </p>
                     ]]>
+                </target>
+            </trans-unit>
+            <trans-unit id="page.start.header">
+                <source>page.start.header</source>
+                <target>Bli Startkompis</target>
+            </trans-unit>
+            <trans-unit id="page.start.text">
+                <source>page.start.text</source>
+                <target>
+                    <![CDATA[
+                        <p>
+                            ...
+                        </p>
+                    ]]>
+                </target>
+            </trans-unit>
+            <trans-unit id="page.start.well">
+                <source>page.start.well</source>
+                <target>
+                    ...
                 </target>
             </trans-unit>
         </body>
