--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -811,6 +811,13 @@ Your friends at Kompisbyrån
 
                         <h3>Tack till...</h3>
                         <p>
+                            <a
+                                href="http://www.delicato.se/)"
+                                target="_blank"
+                            >Delicato</a> som är vår huvudsponsor till Fikakompis! Tillsammans vill vi verka för ökad 
+                            integration i det svenska samhället genom att fika. 
+                        </p>
+                        <p>
                             <strong>Svenska Postkodstiftelsen</strong> som stöttar Kompisbyrån. Tack vare detta
                             bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckling av datasystem och hemsida.
                         </p>
