--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -811,10 +811,7 @@ Your friends at Kompisbyrån
 
                         <h3>Tack till...</h3>
                         <p>
-                            <a
-                                href="http://www.delicato.se/)"
-                                target="_blank"
-                            >Delicato</a> som är vår huvudsponsor till Fikakompis! Tillsammans vill vi verka för ökad 
+                            <strong>Delicato</strong> som är vår huvudsponsor till Fikakompis! Tillsammans vill vi verka för ökad 
                             integration i det svenska samhället genom att fika. 
                         </p>
                         <p>
@@ -822,7 +819,7 @@ Your friends at Kompisbyrån
                             bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckling av datasystem och hemsida.
                         </p>
                         <p>
-                            <strong>Sigtunastiftelsen</strong> som 2015 belönade Kompisbyrån med <a
+                            <strong>Sigtunastiftelsen</strong> som belönat Kompisbyrån med <a
                                 href="http://www.sigtunastiftelsen.se/kompisbyran-far-abrahams-barns-pris-2015/"
                                 target="_blank"
                             >Abrahams Barns pris</a>, med motiveringen att Kompisbyrån skapar förutsättningar
@@ -832,25 +829,22 @@ Your friends at Kompisbyrån
                             Mattizon Armgard, programsekreterare för Abrahams Barn.
                         </p>
                         <p>
-                            <a
-                                href="http://www.lernia.se/kompisbyran/)"
-                                target="_blank"
-                            >Lernia</a> som stöttar Kompisbyråns arbete med att göra det enklare för människor med liknande intressen att
+                            <strong>Lernia</strong> som stöttar Kompisbyråns arbete med att göra det enklare för människor med liknande intressen att
                             mötas och träffa nya vänner i vardagen. I och med detta har vi möjlighet att nå ut till fler som
                             vill träffa nya kompisar.
                         </p>
                         
                         <h3>Ett särskilt tack till...</h3>
                         <p>
-                            Alexandra Arvidson
-                            Carl Lindström
-                            Jessie Moberg
-                            Johanna Nordin
-                            Mikael Öhrén 
-                            Noa Bachner
-                            Sameer Marmary
-                            Sebastian Stenlund
-                            Stella Hernström
+                            Alexandra Arvidson,
+                            Carl Lindström,
+                            Jessie Moberg,
+                            Johanna Nordin,
+                            Mikael Öhrén, 
+                            Noa Bachner,
+                            Sameer Marmary,
+                            Sebastian Stenlund,
+                            Stella Hernström och
                             Stina Wäppling
                         </p>
                     ]]>
