--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -774,29 +774,30 @@ Your friends at Kompisbyrån
 
                         <h3>Thanks to...</h3>
                         <p>
+                            <strong>Delicato</strong>, our main partner for ”Fikakompis”. Together we want to increase the integration in the Swedish society by connecting new friends over a ”fika”.  
+                        </p>   
+                        <p>
                             <strong>Svenska Postkodstiftelsen</strong> 
                         </p>
                         <p>
-                            <strong>Sigtunastiftelsen</strong> which awarded Kompisbyrån with "Abrahams barns pris" 2015 
+                            <strong>Sigtunastiftelsen</strong> which awarded Kompisbyrån with "Abrahams barns pris" 
                         </p>
                         <p>
-                            <a
-                                href="http://www.lernia.se/kompisbyran/)"
-                                target="_blank"
-                            >Lernia</a> 
+                            <strong>Lernia</strong> 
                         </p>
                         
                         <h3>A special thanks to...</h3>
                         <p>
-                        Alexandra Arvidson
-                        Carl Lindström
-                        Jessie Moberg
-                        Johanna Nordin
-                        Mikael Öhrén
-                        Noa Bachner
-                        Sameer Marmary
-                        Sebastian Stenlund
-                        Stella Hernström
+                        Alexandra Arvidson,
+                        Carl Lindström,
+                        Frida Benno-Hjerpe,
+                        Jessie Moberg,
+                        Johanna Nordin,
+                        Mikael Öhrén,
+                        Noa Bachner,
+                        Sameer Marmary,
+                        Sebastian Stenlund,
+                        Stella Hernström, and
                         Stina Wäppling
                         </p>
                     ]]>
