--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -737,22 +737,22 @@ Your friends at Kompisbyrån
 
                         <h3>شكرا ل</h3>
                         <p>
+                            <strong>Delicato</strong> 
+                        </p>
+                        <p>
                             <strong>Svenska Postkodstiftelsen</strong>
                         </p>
                         <p>
                             <strong>Sigtunastiftelsen</strong> 
                         </p>
                         <p>
-                            <a
-                                href="http://www.lernia.se/kompisbyran/)"
-                                target="_blank"
-                            >Lernia</a> 
+                            <strong>Lernia</strong> 
                         </p>
                         <p>
                             شكر خاص ل
                         </p>
                         <p>
-                            Carl Lindström, Jessie Moberg, Johanna Nordin, Mikael Öhrén, Noa Bachner, Sameer Marmary, Sebastian Stenlund, Stella Hernström och Stina Wäppling.
+                            Carl Lindström, Frida Benno-Hjerpe, Jessie Moberg, Johanna Nordin, Mikael Öhrén, Noa Bachner, Sameer Marmary, Sebastian Stenlund, Stella Hernström och Stina Wäppling.
                         </p>
                     ]]>
                 </target>
