--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -938,7 +938,7 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            ...
+                            Mer information kommer! Öppen för anmälan från januari 2017.
                         </p>
                     ]]>
                 </target>
