--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -827,14 +827,16 @@ Your friends at Kompisbyrån
             </trans-unit>
             <trans-unit id="page.start.header">
                 <source>page.start.header</source>
-                <target>Bli Startkompis</target>
+                <target>Startkompis</target>
             </trans-unit>
             <trans-unit id="page.start.text">
                 <source>page.start.text</source>
                 <target>
                     <![CDATA[
                         <p>
-                            ...
+                            Mer information kommer! Öppen för anmälan från januari 2017.
+
+                            More information will soon be released. Open for registration from January 2017. 
                         </p>
                     ]]>
                 </target>
