--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -938,7 +938,20 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            Mer information kommer! Öppen för anmälan från januari 2017.
+                            Nu har du chansen att lära känna en ny kompis över en promenad i ditt närområde. Att hitta i sitt 
+                            närområde kan vara en utmaning för en nyanländ person som precis fått boende i en ny kommun. Då 
+                            behövs praktisk hjälp som att visa var närmaste banken ligger, roliga lekparker och fina grönområden, 
+                            men också förklara hur platserna fungerar och hur du själv förväntas agera. Kunskap som du som 
+                            etablerad kommunbo ofta tar som en självklarhet.
+                        </p>
+                        <p> 
+                            Med vårt nya projektet Startkompis kan du som etablerad svensk erbjuda en timmes promenad i ditt 
+                            närområde med en nyanländ. Du registrerar dig som startkompis här på vår hemsida (Öppen för anmälan 
+                            från januari 2017) där du svarar på några frågor om dig själv. Sedan blir du matchad med en nyanländ 
+                            som gärna vill lära känna fler lokalbor över en promenad. Du som är nyanländ kan också anmäla dig via 
+                            din kommun. Tanken med startkompis är att ge nyanlända en bra start i den kommun de får boende i, 
+                            genom ökad lokalkännedom. För etablerade svenskar är det en unik chans att lära känna fler personer i 
+                            sin kommun.
                         </p>
                     ]]>
                 </target>
